--- a/src/scss/_landig-page.scss
+++ b/src/scss/_landig-page.scss
@@ -4,6 +4,7 @@ $roboto: 'Roboto', sans-serif;
 
 body{
   background-color: #f6f6f6;
+  margin: 0;
 }
 
 .label{
@@ -43,7 +44,47 @@ body{
   box-sizing: border-box;
   -ms-flex-negative: 0;
   flex-shrink: 0;
+  background-color: white;
+  box-shadow: 0px 2px 4px rgba(82, 97, 115, 0.2);
 }
+
+.inactive{
+  opacity: .4;
+  cursor: none;
+}
+
+.blockchain-box{
+  background: #ffffff;
+  border-radius: 4px;
+  padding: 16px 24px;
+  display: inline-block;
+  margin-right: 20px;
+  min-width: 200px;
+  min-height: 150px;
+  text-align: left;
+  cursor: pointer;
+  img{
+    display: inline;
+  }
+  h3{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 40px;
+    color: #131415;
+  }
+  p{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 150%;
+    color: #131415;
+  }
+}
+
+
 
 .landing-page-form-wrapper{
   width: 100%;
@@ -51,9 +92,7 @@ body{
   min-height: 540px;
   height: 100%;
   border-radius: 6px;
-  box-shadow: 0 4px 8px 0 rgba(82, 97, 115, 0.18);
-  background-color: #ffffff;
-  margin: 0 auto;
+  margin: 30px auto;
     label{
       opacity: 0.5;
       font-family: $roboto;
@@ -69,7 +108,7 @@ body{
         }
     }
     h1{
-      padding-top: 66px;
+      margin-top: 0;
       font-family: $roboto;
       font-size: 28px;
       font-weight: bold;
@@ -77,7 +116,7 @@ body{
       font-stretch: normal;
       line-height: 1.29;
       letter-spacing: normal;
-      color: #526173;
+      color: #131415;
       @media (max-width: 450px) {
         font-size: 24px;
       }
@@ -93,7 +132,7 @@ body{
         width: 100%;
         height: 46px;
         border-radius: 4px;
-        background-color: #4b396f;
+        background-color: #1D2667;
         font-family: $roboto;
         font-size: 16px;
         font-weight: 500;
