--- a/src/scss/_landig-page.scss
+++ b/src/scss/_landig-page.scss
@@ -53,7 +53,19 @@ body{
   cursor: none;
 }
 
-.blockchain-box{
+.ethereum-blockchain-box.active{
+  background-color: #E8EBFF;
+  transition: .2s all;
+  border: 1px solid #4C569C;
+}
+
+.xdai-blockchain-box.active{
+  background-color: #E8EBFF;
+  transition: .2s all;
+  border: 1px solid #4C569C;
+}
+
+.xdai-blockchain-box{
   background: #ffffff;
   border-radius: 4px;
   padding: 16px 24px;
@@ -63,8 +75,87 @@ body{
   min-height: 150px;
   text-align: left;
   cursor: pointer;
+  transition: .2s all;
+  border: 1px solid #ffffff;
+  &:focus,
+  &:active{
+
+  }
   img{
     display: inline;
+    height: 45px;
+  }
+  h3{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 40px;
+    color: #131415;
+  }
+  p{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 150%;
+    color: #131415;
+  }
+}
+
+.ethereum-blockchain-box{
+  background: #ffffff;
+  border-radius: 4px;
+  padding: 16px 24px;
+  display: inline-block;
+  margin-right: 20px;
+  min-width: 200px;
+  min-height: 150px;
+  text-align: left;
+  cursor: pointer;
+  transition: .2s all;
+  border: 1px solid #ffffff;
+  &:focus,
+  &:active{
+
+  }
+  img{
+    display: inline;
+    height: 45px;
+  }
+  h3{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 40px;
+    color: #131415;
+  }
+  p{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 150%;
+    color: #131415;
+  }
+}
+.blockchain-box-disabled{
+  background: #ffffff;
+  border-radius: 4px;
+  padding: 16px 24px;
+  display: inline-block;
+  margin-right: 20px;
+  min-width: 200px;
+  min-height: 150px;
+  text-align: left;
+  cursor: unset;
+  transition: .2s all;
+  border: 1px solid #ffffff;
+  opacity: .4;
+  img{
+    display: inline;
+    height: 45px;
   }
   h3{
     font-family: Roboto;
